// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenewalEstimation expect to render 1`] = `
<Fragment>
  <Component
    aria-label="Renewal estimation"
    borders={false}
    cells={
      Array [
        "For vSphere Enterprise Plus",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right",
          },
          "title": "ELA Renewal Estimation",
        },
      ]
    }
    rows={
      Array [
        Array [
          "-- As high as...",
          "$1,000",
        ],
        Array [
          "-- Most likely...",
          "$2,000",
        ],
        Array [
          "-- As low as...",
          "$3,000",
        ],
      ]
    }
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Component>
</Fragment>
`;

exports[`RenewalEstimation expect to render using null and undefined data 1`] = `
<Fragment>
  <Component
    aria-label="Renewal estimation"
    borders={false}
    cells={
      Array [
        "For vSphere Enterprise Plus",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right",
          },
          "title": "ELA Renewal Estimation",
        },
      ]
    }
    rows={
      Array [
        Array [
          "-- As high as...",
          "Unknown",
        ],
        Array [
          "-- Most likely...",
          "Unknown",
        ],
        Array [
          "-- As low as...",
          "Unknown",
        ],
      ]
    }
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Component>
</Fragment>
`;

exports[`RenewalEstimation expect to render using null and undefined data 2`] = `
<Fragment>
  <Component
    aria-label="Renewal estimation"
    borders={false}
    cells={
      Array [
        "For vSphere Enterprise Plus",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right",
          },
          "title": "ELA Renewal Estimation",
        },
      ]
    }
    rows={
      Array [
        Array [
          "-- As high as...",
          "Unknown",
        ],
        Array [
          "-- Most likely...",
          "Unknown",
        ],
        Array [
          "-- As low as...",
          "Unknown",
        ],
      ]
    }
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Component>
</Fragment>
`;

exports[`RenewalEstimation expect to render using values equal to 0 1`] = `
<Fragment>
  <Component
    aria-label="Renewal estimation"
    borders={false}
    cells={
      Array [
        "For vSphere Enterprise Plus",
        Object {
          "props": Object {
            "className": "pf-u-text-align-right",
          },
          "title": "ELA Renewal Estimation",
        },
      ]
    }
    rows={
      Array [
        Array [
          "-- As high as...",
          "$0",
        ],
        Array [
          "-- Most likely...",
          "$0",
        ],
        Array [
          "-- As low as...",
          "$0",
        ],
      ]
    }
    variant="compact"
  >
    <TableHeader />
    <TableBody />
  </Component>
</Fragment>
`;
